<?xml version="1.0"?>
<package format="2">
  <name>flocking</name>
  <version>0.1.0</version>
  <description>Flocking behavior package</description>

  <author email="thulioguilherme53@gmail.com">Thulio Amorim</author>
  <maintainer email="thulioguilherme53@gmail.com">Thulio Amorim</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>message_filters</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>
</package>
